# integer_overflow_detection

./: .gitignore  .gitmodules  README.md  build.sh  build_clean.sh  run.sh
scripts/: env_clean.sh  env_init.sh  make_tests.sh
src/: CMakeLists.txt  core.cpp  ctxt_container.h  instruction.h  operand.h  operator.h  profiler.cpp  profiler.h  register.h
test_apps/: build.sh  build_clean.sh
test_apps/src/: test1.c
